--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# Random
+__pycache__/ 
+app_settings.json fb0ff9c09a2ddbdcd0955c9b31686d0ec095896e
+
 # Runtime data
 pids
 *.pid
