Stop tracking app_settings.json and __pycache__/. Restructured main.py to class structure

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# Random
+__pycache__/ 
+app_settings.json
+
 # Runtime data
 pids
 *.pid
